# littlefig

./: .gitignore  Little_Fig_Colab.ipynb  READme.md  RESEARCH_PLAN.md  pyproject.toml
.fig_chats/: 5d21c14aac6d.json
benchmark/: benchmark_gpu.py  experiment_ember_goal_recall.py  experiment_figmezo.py
paper/: fig_engine.md
scripts/: install_deps.py
src/little_fig/: __init__.py  model.py  trainer.py
src/little_fig/engine/: __init__.py  ember_integration.py  figkernel.py  figmezo.py  figpipeline.py  figquant.py  gguf_loader.py  linear.py  lisa.py  lomo.py  memory_fabric.py  mezo.py  micro_trainer.py  model.py  packing.py  quantize.py  tier.py  trainer.py
src/little_fig/models/: loader.py
src/little_fig/studio/: __init__.py  app.py  dataset_builder.py  eval_tools.py  merge_tools.py
src/little_fig/web/: __init__.py  server.py
src/little_fig/web/static/: index.html
tests/: test_engine.py  test_v05.py  v05_results.json
