[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "little-fig"
version = "0.6.0"
description = "Little Fig: CPU-native LLM engine with FigQuant, FigKernel, FigPipeline, and Ember memory integration"
readme = "READme.md"
requires-python = ">=3.9"

dependencies = [
    # NOTE: torch is NOT listed here intentionally.
    # pip install torch by default grabs the CUDA build (~2.5GB).
    # Install CPU-only torch first:
    #   pip install torch --index-url https://download.pytorch.org/whl/cpu
    "transformers>=5.5.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "gguf>=0.6.0",
    "accelerate>=0.27.0,<2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]

# Fine-tuning with Fig Engine: pip install -e ".[train]"
train = [
    "datasets>=2.18.0,<4.0.0",
]

# Full install (inference + training + memory)
full = [
    "datasets>=2.18.0,<4.0.0",
    "embers-diaries",
]

[project.scripts]
little-fig = "little_fig:start"

[tool.setuptools.packages.find]
where = ["src"]
include = ["little_fig*"]

[tool.setuptools.package-data]
"little_fig.web" = ["static/**/*"]
